--- a/config/database.yml
+++ b/config/database.yml
@@ -11,15 +11,18 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  # database: db/development.sqlite3
+  database: friends_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  # database: db/test.sqlite3
+  database: friends_test
 
 production:
   <<: *default
-  database: db/production.postgresql
+  # database: db/production.postgresql
+  database: friends_production
