--- a/config/database.yml
+++ b/config/database.yml
@@ -24,5 +24,6 @@ test:
 
 production:
   <<: *default
+  adapter: postgresql
   # database: db/production.postgresql
   database: friends_production
